# TASK-21

./: README.md  metadata.json
.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  audit_report-2.md  test_coverage_and_readme_audit_report.md
docs/: api-spec.md  design.md  questions.md
repo/: .gitignore  Cargo.toml  README.md  docker-compose.yml  run_tests.sh
repo/backend/: Cargo.toml  Dockerfile
repo/backend/src/: auth.rs  crypto.rs  db.rs  lib.rs  main.rs  middleware.rs
repo/backend/src/routes/: admin.rs  auth_routes.rs  comments.rs  donations.rs  events.rs  finance.rs  fulfillment.rs  mod.rs  moderation.rs  notifications.rs  projects.rs  receipts.rs  webhooks.rs
repo/backend/tests/: api_extended.rs  integration.rs  workflow_e2e.rs
repo/common/: Cargo.toml
repo/common/src/: lib.rs
repo/database/: init.sql
repo/frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf
repo/frontend/src/: analytics.rs  api.rs  lib.rs  main.rs  state.rs
repo/frontend/src/components/: budget_bar.rs  comment_section.rs  mod.rs  nav.rs  notification_center.rs  project_card.rs  receipt.rs  route_guard.rs
repo/frontend/src/pages/: admin.rs  dashboard.rs  donate.rs  finance.rs  fulfillment.rs  home.rs  login.rs  mod.rs  profile.rs  project_detail.rs  project_list.rs  staff.rs
repo/frontend/static/: manifest.json  style.css  sw.js
repo/frontend/tests/: common_types.rs  component_render.rs  dto_serde_extra.rs  ui_logic.rs
sessions/: bugfix-1.json  bugfix-2.json  develop-1.json
