[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
parking_lot = "0.12"
csv = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
