[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "HtmlInputElement", "FileReader", "File", "FileList", "Blob", "Event", "console"] }
js-sys = "0.3"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1", features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
